--- a/chart/microservice-vote/templates/deploy-vote.yaml
+++ b/chart/microservice-vote/templates/deploy-vote.yaml
@@ -196,4 +196,5 @@ spec:
               path: defaults/keystore.xml
             - key: logging.xml
               path: defaults/logging.xml
+          optional: true
 {{ end }}
