Add quotes to fix issue with exponential image tag

--- a/chart/microservice-vote/templates/deploy-vote.yaml
+++ b/chart/microservice-vote/templates/deploy-vote.yaml
@@ -134,7 +134,7 @@ spec:
     spec:
       containers:
       - name: microservice-vote
-        image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         env:
 {{ if ne .Values.test true }}
         - name: MB_KEYSTORE_PASSWORD
